# scutua-mcp

./: .env  .env.example  .gitignore  .npmignore  Dockerfile  README.md  index.js  main.py  package.json  pyproject.toml  requirements.txt  smithery.yaml
.github/workflows/: ci.yml  codecov.yml  codeql.yml  docker.yml  keep-alive.yml  license.yml  npm-publish.yml  release.yml  security.yml
config/: __init__.py  settings.py
docs/: index.html
src/: main.py  server_card.py
src/tools/: __init__.py  aave_live.py  airdrop.py  alerts.py  base.py  bridge.py  copy_trade.py  cosmos.py  crosschain.py  dashboard.py  defi.py  dominance.py  drift.py  ens.py  etf.py  fear_greed.py  github.py  heatmap.py  jupiter.py  launchpad.py  lido.py  narrative.py  news.py  nft.py  nft_floor.py  onchain.py  options.py  perp.py  points.py  polkadot.py  reef.py  registry.py  rwa.py  signal.py  social.py  solana.py  stablecoin.py  staking.py  tax.py  ton.py  (+4 more)
src/tools/agentic/: README.md  __init__.py  arbitrage_scanner.py  portfolio_autopilot.py  sentiment_signal.py  whale_alert.py
src/tools/analytics/: __init__.py  analytics.py  arbitrage.py  birdeye.py  defilama.py  dune.py  etf.py  exchange_rates.py  exploit.py  fear_greed.py  gas.py  heatmap.py  (+9 more)
src/utils/: __init__.py  cache.py  formatters.py  logger.py  rate_limiter.py  security.py
tests/: __init__.py  test_analytics.py  test_chains.py  test_formatters.py  test_market.py  test_operations.py  test_protocols.py  test_security.py
tools/market/: __init__.py  cmc.py  coingecko.py  fear_index.py  overview.py  sentiment.py  trending.py
(+60 files in other folders)
