[project]
name = "scutua-mcp"
version = "0.1.0"
description = "WhaleTrucker MCP Server — Multi-Chain Ecosystem"
authors = [{name = "scutuatua-crypto"}]
requires-python = ">=3.11"

[project.scripts]
scutua-mcp = "src.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

