[project]
name = "scutua-mcp"
version = "1.0.0"
description = "WhaleTrucker MCP Server — Multi-Chain Ecosystem | Solana, Polkadot, Reef, DeFi"
authors = [{name = "scutuatua-crypto"}]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
keywords = ["mcp", "crypto", "solana", "polkadot", "defi", "whale", "blockchain"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/scutuatua-crypto/scutua-mcp"
Repository = "https://github.com/scutuatua-crypto/scutua-mcp"

[project.scripts]
scutua-mcp = "src.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
